--- a/es6/简介.md
+++ b/es6/简介.md
@@ -1,8 +1,8 @@
-Nodejs是JavaScript的服务器运行环境，对ES6的支持度比浏览器更高，通过node可以体验更多的ES6特性。
+#Nodejs是JavaScript的服务器运行环境，对ES6的支持度比浏览器更高，通过node可以体验更多的ES6特性。
+***
+##babel将ES5转为ES5到浏览器环境执行
 
-##babel将ES5转为ES5到浏览器环境执行##
-
-ES6的写法：
+ES6的写法：  
 `input.map(item => item + 1);`
 
 经过babel转码为：  
