--- a/es6/简介.md
+++ b/es6/简介.md
@@ -1,17 +1,21 @@
-# Nodejs是JavaScript的服务器运行环境，对ES6的支持度比浏览器更高，通过node可以体验更多的ES6特性。
-***
-## babel将ES5转为ES5到浏览器环境执行
+**Nodejs是JavaScript的服务器运行环境，对ES6的支持度比浏览器更高，通过node可以体验更多的ES6特性。**
+
+### babel将ES5转为ES5到浏览器环境执行
 
 ES6的写法：
-`input.map(item => item + 1);`
+
+    input.map(item => item + 1);
 
 经过babel转码为：
-`input.map(function( item) {
-    return item + 1;
-});`
 
-npm install --save-dev babel-preset-es2015
+    input.map(function( item) {
+        return item + 1;
+    });
 
-/*
-npm install --save-dev babel-preset-react
-*/
+
+### 安装
+<pre>npm install --save-dev babel-preset-es2015</pre>
+
+    /*
+        npm install --save-dev babel-preset-react
+    */
