--- a/es6/简介.md
+++ b/es6/简介.md
@@ -14,8 +14,6 @@ ES6的写法：
 
 
 ### 安装
-<pre>npm install --save-dev babel-preset-es2015</pre>
+        npm install --save-dev babel-preset-es2015</pre>
 
-    /*
-        npm install --save-dev babel-preset-react
-    */
+     /*  npm install --save-dev babel-preset-react   */
