--- a/fragment/一些面试题.md
+++ b/fragment/一些面试题.md
@@ -11,6 +11,7 @@
     //[object Array]
 
 4.`isArray`方法
+
     Array.isArray(arr);
 
 #### 判断是否为字符串
@@ -35,14 +36,13 @@
 - 创建了一种新的作用域：eval作用域：
 
 
-    "use strict";
-    var x = 2;
-    console.info(eval("var x = 5; x")); // 5
-    console.info(x); // 2
+	    "use strict";
+	    var x = 2;
+	    console.info(eval("var x = 5; x")); // 5
+	    console.info(x); // 2
 
 
 #### 关于eval
-
 `eval`只有在**直接调用**并且调用函数就是`eval`本身时，才会在当前作用域中执行。
 
     var foo = 1;
@@ -55,6 +55,7 @@
     
     test(); // 3
     foo; // 1
+    
 看这一段：
 
     var foo = 1;
@@ -69,3 +70,31 @@
     test(); // 2
     foo; // 3
 应该避免使用`eval`函数，99.9%的使用`eval`的场景都有**不使用**`eval`的解决方案。
+
+#### 手动实现继承
+
+许多OO语言都支持两种继承方式：**接口继承和实现继承**,接口继承继承方法签名，实现继承继承实际的方法。
+在ECMAScript中，由于函数没有签名，无法实现接口继承，只支持实现继承。实现继承主要依靠原型链实现。
+
+    function Parent(){
+    
+    }
+    Parent.prototype.showJob = function(){
+		
+	}
+	function Child(){
+	
+	}
+	Child.prototype = new Parent();
+	Child.prototype.constructor = Child;
+	var grandChild = new Child();
+
+这样，grandchild继承了构造函数Parent的原型方法。
+
+#### 进程和线程
+
+1.进程
+
+进程，是并发执行的程序在执行过程中的分配和管理资源的基本单位，是一个动态概念。每个进程都有自己独立的内存空间（大小与处理机位数有关）。在保护模式下，一个进程崩溃了，不会对其它进程产生影响。由于是独立的内存空间，上下文切换的时候需要先保存调用栈的信息，CPU各寄存器等信息，导致上下文切换时开销很大。
+   
+进程之间不共享任何状态，进程的调度由操作系统完成。进程间的通讯主要通过信号传递的方式实现：信号量，管道，事件等，任一种方式的通讯都要通过内核，导致通讯效率较低。
