正则去除空格

--- a/fragment/一些面试题.md
+++ b/fragment/一些面试题.md
@@ -91,6 +91,12 @@
 
 这样，grandchild继承了构造函数Parent的原型方法。
 
+#### 正则去除字符串的首尾空格
+
+    var str = " dai you kongge de zi fuchuan !  ";
+    var reg = /^\s*|\s*$/g;
+    str.replace(reg, '')
+    
 #### 进程和线程
 
 1.进程
