--- a/fragment/一些面试题.md
+++ b/fragment/一些面试题.md
@@ -96,7 +96,18 @@
     var str = " dai you kongge de zi fuchuan !  ";
     var reg = /^\s*|\s*$/g;
     str.replace(reg, '')
-    
+
+#### CSS的link和import的区别
+
+1.加载顺序不同，import会等到页面加载完之后再加载；
+2.兼容问题：import是css2.1提出的，老版本浏览器不支持；
+
+#### box-sizing
+永和控制元素的盒模型的解析模式，默认为content-box。
+
+content-box：让元素维持W3C的标准盒模型，元素的宽度/高度由border + padding + content的宽度/高度决定，设置width/height属性指的是content部分的宽/高
+border-box：让元素维持IE传统盒模型，设置width/height属性指的是border + padding + content
+
 #### 进程和线程
 
 1.进程
