--- a/fragment/一些面试题.md
+++ b/fragment/一些面试题.md
@@ -103,10 +103,35 @@
 2.兼容问题：import是css2.1提出的，老版本浏览器不支持；
 
 #### box-sizing
-永和控制元素的盒模型的解析模式，默认为content-box。
+用于控制元素的盒模型的解析模式，默认为content-box。
 
 content-box：让元素维持W3C的标准盒模型，元素的宽度/高度由border + padding + content的宽度/高度决定，设置width/height属性指的是content部分的宽/高
 border-box：让元素维持IE传统盒模型，设置width/height属性指的是border + padding + content
+
+
+#### 清除浮动
+1.为什么要清除浮动？
+
+当一个内层元素是浮动的时候，如果没有关闭浮动时，其父元素也就不会再包含这个浮动的内层元素，因为此时浮动元素已经脱离了文档流，导致外层不会被撑开。
+
+2.如何清除浮动？
+
+- 在内层中添加元素，且其css样式设置为：
+
+    clear:both;
+- 在父层元素中添加css样式：
+
+    overflow;auto;
+- 使用:after伪元素：
+
+    .father:after{
+        content: '';
+        display: block;
+        clear: both;
+    }
+
+#### position
+
 
 #### 进程和线程
 
