--- a/notes/函数防抖和节流.md
+++ b/notes/函数防抖和节流.md
@@ -28,18 +28,18 @@
     const throttle = (fn, delay) => {
       let timer
       let startTime = new Date()
-      reuturn function () {
+      return function () {
         const conText = this
         const args = arguments
         clearTimeout(timer)
         const currentTime = new Date()
         if (currentTime - startTime > delay) {
-          fn.apply(conText, arguments)
+          fn.apply(conText, args)
           startTime = currentTime
         } else {
           // 保证最后一次回调一定被执行
           timer = setTimeout(function () {
-            fn.apply(conText, arguments)
+            fn.apply(conText, args)
           }, delay)
         }
       }
