--- a/notes/一些细节前端笔试题.md
+++ b/notes/一些细节前端笔试题.md
@@ -6,7 +6,7 @@ postion:absolute，相对于最近的"positioned"祖先元素定位(即static除
 
 #### 垂直居中
 1.宽高固定
-```
+```css
 .parent{
   position:relative;
 }
@@ -19,22 +19,22 @@ postion:absolute，相对于最近的"positioned"祖先元素定位(即static除
 }
 ```
 2.宽高未知
-
-	.parent{
-	  position:relative;
-	}
-	.child{
-	  width:300px;
-	  height:300px;
-	  position:absolute;
-	  transform:translate(-50%, -50%);
-	}
-3.flex
+```css
+.parent{
+  position:relative;
+}
+.child{
+  width:300px;
+  height:300px;
+  position:absolute;
+  transform:translate(-50%, -50%);
+}
 ```
+3.flex
+```css
 .parent{
   display:flex;
   justify-content:center;
   align-item:center;
 }
 ```
-
