--- a/notes/深拷贝和浅拷贝.md
+++ b/notes/深拷贝和浅拷贝.md
@@ -5,7 +5,7 @@
 这里有一个例子：
 
 
-```
+```javascript
 const obj = {
   name: 'Bill',
   age: 18,
@@ -35,7 +35,7 @@ obj.hobbies.push('coding')
 
 实现一个完善的深拷贝：
 
-```
+```javascript
 const deepCopy = obj => {
   const type = Object.prototype.toString.apply(obj).toLowerCase().slice(8, -1)
   if (typeof obj !== 'object') {
