--- a/模块机制.md
+++ b/模块机制.md
@@ -80,3 +80,6 @@ ES6标准发布后，module成为标准，标准使用是以`export`指令导出
 在ES 6标准中，
 `export`只支持对象形式的导出，不支持值的导出
 `export default`命令用于指定模块的默认输出，只支持值导出，但是只能指定一个
+
+- `import` 命令会被 JavaScript 引擎静态分析，优先于模块内的其他内容执行。
+- `export` 命令会有变量声明提前的效果。
