--- a/浏览器原理相关.md
+++ b/浏览器原理相关.md
@@ -1,4 +1,4 @@
-### Chrome 打开一个页面需要启动多少进程？分别有哪些？
+#### Chrome 打开一个页面需要启动多少进程？分别有哪些？
 
 浏览器从关闭状态进行启动，然后新开1个页面至少需要1个网络进程、1个浏览器进程、1个GPU进程以及1个渲染进程，共4个进程；后续再新开标签页，浏览器、网络进程、GPU进程是共享的，不会重新启动，如果两个页面a、b属于同一站点的话，并且从a页面中打开的b页面，那么他们也会共用一个渲染进程，否则新开一个渲染进程。
 
@@ -7,7 +7,7 @@
 - GPU 进程：Chrome 刚开始发布的时候是没有 GPU 进程的。而 GPU 的使用初衷是为了实现 3D CSS 的效果，只是随后网页、Chrome 的 UI 界面都选择采用 GPU 来绘制，这使得 GPU 成为浏览器普遍的需求。最后，Chrome 在其多进程架构上也引入了 GPU 进程。
 - 网络进程：主要负责页面的网络资源加载，之前是作为一个模块运行在浏览器进程里面的，直至最近才独立出来，成为一个单独的进程。
 
-### 如何保证页面文件能被完整送达浏览器？
+#### 如何保证页面文件能被完整送达浏览器？
 ##### 网络层
 如果要想把一个数据包从主机 A 发送给主机 B，那么在传输之前，数据包上会被附加上主机 B 的 IP 地址信息，这样在传输过程中才能正确寻址。此外，数据包上还会附加上主机 A 本身的 IP 地址，有了这些信息主机 B 才可以回复信息给主机 A。这些附加的信息会被装进一个叫 IP 头的数据结构里。IP 头是 IP 数据包开头的信息，包含 IP 版本、源 IP 地址、目标 IP 地址、生存时间等信息。
 
