--- a/深拷贝和浅拷贝.md
+++ b/深拷贝和浅拷贝.md
@@ -4,8 +4,7 @@
 
 这里有一个例子：
 
-
-```javascript
+```js
 const obj = {
   name: 'Bill',
   age: 18,
@@ -20,7 +19,7 @@ obj.hobbies.push('coding')
 ```
 由于`obj2`、`obj3`在这里是**浅拷贝**，`obj2.name`、`obj3.name` 不变，但是`obj2.hobbies`、`obj3.hobbies`会受到影响。
 
-最简单的深拷贝实现：`JSON.parse(JSON.stringify(obj))`，这种方法有下面几个缺点：
+最简单的深拷贝实现：```JSON.parse(JSON.stringify(obj))```，这种方法有下面几个缺点：
 
 - 不能正确处理正则类型
 - 不能正确处理`Date`类型
@@ -35,7 +34,7 @@ obj.hobbies.push('coding')
 
 实现一个完善的深拷贝：
 
-```javascript
+```js
 const deepCopy = obj => {
   const type = Object.prototype.toString.apply(obj).toLowerCase().slice(8, -1)
   if (typeof obj !== 'object') {
