--- a/浏览器原理相关.md
+++ b/浏览器原理相关.md
@@ -1,6 +1,6 @@
 #### Chrome 打开一个页面需要启动多少进程？分别有哪些？
 
-浏览器从关闭状态进行启动，然后新开1个页面至少需要1个网络进程、1个浏览器进程、1个GPU进程以及1个渲染进程，共4个进程；后续再新开标签页，浏览器、网络进程、GPU进程是共享的，不会重新启动，如果两个页面a、b属于同一站点的话，并且从a页面中打开的b页面，那么他们也会共用一个渲染进程，否则新开一个渲染进程。
+浏览器从关闭状态进行启动，新开1个页面至少需要1个网络进程、1个浏览器进程、1个GPU进程以及1个渲染进程，共4个进程；后续再新开标签页，浏览器、网络进程、GPU进程是共享的，不会重新启动，如果两个页面a、b属于同一站点的话，并且从a页面中打开的b页面，那么他们也会共用一个渲染进程，否则新开一个渲染进程。
 
 - 浏览器进程：主要负责界面显示、用户交互、子进程管理，同时提供存储等功能。
 - 渲染进程：核心任务是将 HTML、CSS 和 JavaScript 转换为用户可以与之交互的网页，排版引擎 Blink 和 JavaScript 引擎 V8 都是运行在该进程中，默认情况下，Chrome 会为每个 Tab 标签创建一个渲染进程。出于安全考虑，渲染进程都是运行在沙箱模式下。
@@ -15,4 +15,4 @@
 IP协议是网络层协议，只负责把数据包传送到对方硬件设备中，但是对方并不知道把数据包交给哪个进程，比如是交给浏览器还是交给微信？因此，需要基于IP之上的和应用打交道的传输层协议，常见的是用户数据包协议UDP(User Datagram Protocol)、传输控制协议TCP(Transmission Control Protocol)。
 
 ##### 应用层
-应用程序收到"传输层"的数据，接下来就要进行解读。由于互联网是开放架构，数据来源五花八门，必须事先规定好格式，否则根本无法解读。HTTP是应用层协议，它的数据就放在TCP数据包的"数据"部分。
+应用程序收到"传输层"的数据，接下来就要进行解读。由于互联网是开放架构，数据来源五花八门，必须事先规定好格式，否则无法解读。HTTP是应用层协议，它的数据就放在TCP数据包的"数据"部分。
