--- a/深拷贝和浅拷贝.md
+++ b/深拷贝和浅拷贝.md
@@ -35,7 +35,7 @@ obj.hobbies.push('coding')
 实现一个完善的深拷贝：
 
 ```js
-const deepCopy = obj => {
+function deepCopy (obj) {
   const type = Object.prototype.toString.apply(obj).toLowerCase().slice(8, -1)
   if (typeof obj !== 'object') {
     return obj
