--- a/前端模块化.md
+++ b/前端模块化.md
@@ -78,21 +78,34 @@ Module.foo()
 
 当前模块依赖jQuery库，因此需要将jQuery作为参数传入，这样**保证了模块之间的独立性，模块间的依赖关系也表现地比较明显**，这也是现代模块实现的基石。
 
-### 模块化规范
+## 模块化的好处
+- 避免命名冲突、减少命名空间污染
+- 按需加载
+- 复用性、维护性
+
+## 模块化规范
+传统的通过`<script>`引入模块的方式，存在两个问题：一是每个JavaScript模块对应一个资源请求，当引入多个模块时会导致请求过多；二是模块间的依赖关系，导致严格的`<script>`的先后顺序，且依赖关系不明显。
+
+针对上面提到的两点，各种前端模块化规范也应用而生了，下面对各个规范作介绍。
 - CommonJS
 - AMD
 - CMD
 - ES 6模块化
+
+----
+#### 分割线
+
+----
 
 ### CommonJS
 CommonJS规范规定，每个模块内部，`module`变量代表当前模块。这个变量是一个对象，它的`exports`属性（即`module.exports`）是对外的接口。加载某个模块，其实是加载该模块的`module.exports`属性。
 
 CommonJS规范特点如下：
 
-1.所有代码都运行在模块作用域内，不会污染全局作用域。
-2.模块可以多次加载，但是只会**在第一次加载时运行一次**，然后模块就被缓存了，以后再加载，就直接读取缓存结果。如果要让模块再次运行，必须清除缓存。
-3.模块加载的顺序，按照其在代码中出现的顺序。
-4.模块加载是同步的，只有模块加载完成，才能执行后面的操作。
+1. 所有代码都运行在模块作用域内，不会污染全局作用域。
+2. 模块可以多次加载，但是只会**在第一次加载时运行一次**，然后模块就被缓存了，以后再加载，就直接读取缓存结果。如果要让模块再次运行，必须清除缓存。
+3. 模块加载的顺序，按照其在代码中出现的顺序。
+4. 模块加载是同步的，只有模块加载完成，才能执行后面的操作。
 
 Node内部提供一个Module构建函数。所有模块都是Module的实例。
 
