--- a/图片懒加载.md
+++ b/图片懒加载.md
@@ -28,8 +28,7 @@ document.addEventListener('scroll', debounce(watchScroll, 200))
 ```
 
 #### 拓展 IntersectionObserver
-故事本来到这里可以结束了，但是对scroll事件的监听（即使使用了防抖或节流仍会）导致大量计算，以及`setTimeout`的使用仍然存在性能问题
-，2016年初chrome率先实现了一个新的API —— `IntersectionObserver`（目前在IE、Opera上还不被支持）），用来监听元素是否进入设备的可视区。
+故事本来到这里可以结束了，但是对scroll事件的监听（即使使用了防抖或节流仍会）导致大量计算，以及`setTimeout`的使用仍然存在性能问题，2016年初chrome率先实现了一个新的API —— `IntersectionObserver`（目前在IE、Opera上还不被支持）），用来监听元素是否进入设备的可视区。
 
 使用：
 ```js
