--- a/函数防抖和节流.md
+++ b/函数防抖和节流.md
@@ -1,5 +1,5 @@
 #### 函数防抖
-在事件被触发delay时间间隔后再执行回调，如果在这delay时间内又被触发，则重新计时。
+在事件被触发delay时间间隔之后再执行回调方法，如果在这delay时间内事件再次触发，则重新计时等待delay时间间隔后回调方法的执行。
 
 ```js
 function debounce (fn, delay) {
@@ -19,29 +19,34 @@ input.onkeypress = debounce(function(){
 }, 500)
 ```
 
-每次事件触发回调函数均会将之前的计时器重置：
-1. 如果两次回调函数的触发事件间隔 > delay，计时器清空不影响前一次回调函数的执行（因为已经执行过了），两次回调函数都得到执行
-2. 如果两次回调函数的触发事件间隔 < delay，由于计时器清空，导致前一次回调函数得不到执行（在delay时刻到来之前被重置）
-3. 如果继续有事件触发了回调函数，且触发时间间隔均在delay内，则导致之前的回调函数均得不到执行。
+由于每次事件触发回调函数均会将之前的计时器重置：（后面的**连续**指的是两次回调之间没有其他回调）
+1. 如果连续的两次回调函数的触发事件时间间隔 > delay，计时器清空不影响前一次回调函数被执行（因为已经执行过了）。
+2. 如果连续的两次回调函数的触发事件时间间隔 < delay，由于计时器清空，导致前一次回调函数得不到执行（计时器在延迟delay时刻到来之前已经被清空）
+3. 如果后续仍有事件触发了回调函数，且触发时刻的间隔均在delay内，则导致之前的回调函数均得不到执行。
+4. 第一次被触发的回调函数未必会执行，这取决于防抖的具体实现逻辑以及这之后紧接着的回调函数被触发的时间间隔。
+5. 最后一次被触发的回调函数一定会被执行，因为后续不会再有回调函数执行会影响计时器。
 
-一般用于处理事件的回调，事件会频繁触发，但是对事件的回调函数的执行进行控制。
+一般用于处理事件的回调，事件会频繁触发，对于连续触发的两次回调函数，前一次回调得到的执行的条件是它距离后一次回调被触发的时间间隔足够久（大于delay）。
 
 #### 函数节流
-规定在一个单位时间内，只能有一个函数回调得到执行。
+规定在指定时间内，只能有一个函数回调得到执行。
 
 ```js
 function throttle (fn, delay) {
   let timer
-  // throttle处理回调函数时 打点
   let startTime = new Date()
+
   return function () {
     const conText = this
     const args = arguments
-    clearTimeout(timer)
     const currentTime = new Date()
-    // 首次触发一般距离绑定事件监听时间> delay
+
+    clearTimeout(timer)
+    
+    // 回调函数的首次触发时间一般距离绑定事件监听时间 > delay
     if (currentTime - startTime > delay) {
       fn.apply(conText, args)
+      // 回调函数执行后重置计时起始时间
       startTime = currentTime
     } else {
       // 保证最后一次回调一定被执行
@@ -53,11 +58,52 @@ function throttle (fn, delay) {
 }
 ```
 
-1. 如果两次回调函数的触发事件间隔 > delay，计时器清空不影响前一次回调函数的执行（因为已经执行过了），两次回调函数都得到执行
-2. 如果两次回调函数的触发事件间隔 < delay，由于计时器清空，导致前一次回调函数得不到执行（在delay时刻到来之前被重置）
-3. 如果继续有事件触发了回调函数，且触发时间间隔均在delay内，则导致之前的回调函数均得不到执行。
+第一次被触发的回调函数和最后一次被触发的回调函数是否执行，均取决于节流函数的具体实现逻辑。
 
-#### 适用的场景
+```js
+/*
+* 另一种节流方式
+*/
+function throttle (fn, delay, immediate) {
+  let canRun = true
+  let timer
+
+  return function () {
+    const conText = this
+    const args = arguments
+
+    if (!canRun) return
+    canRun = false
+
+    // 第一次回调是否立即执行
+    if (immediate) {
+      fn.call(context, ...args)
+      immediate = false
+      return canRun = true
+    }
+    
+    clearTimeout(timer)
+    timer = setTimeout(() => {
+      fn.apply(conText, args)
+      canRun = true
+    }, delay)
+  }
+}
+```
+
+#### 总结
+1. 区别
+- 防抖强调从**回调函数的角度**，某个回调需要距离下一次回调被触发的时间间隔足够久，才能得到执行；
+- 节流强调从**指定时间间隔的角度**，回调函数在指定时间间隔内最多执行一次。
+
+对于频繁连续触发（时间间隔 < delay）的事件，
+- 防抖函数只有最后一次会执行；
+- 节流函数每隔delay时间内最多执行一次，如果事件触发频率足够大，可以看作节流函数接近于每delay时间间隔执行一次。
+
+2. 使用场景
+- 防抖：根据用户输入内容变化动态展示联想搜索词 / 数据提交按钮的点击事件
+- 节流：滚动事件
+
 ___
 #### 参考
-<!-- 1. []() -->
+[什么是防抖和节流？](https://github.com/Advanced-Frontend/Daily-Interview-Question/issues/5)
