--- a/Vue源码/2-入口文件.md
+++ b/Vue源码/2-入口文件.md
@@ -292,10 +292,10 @@ export function initGlobalAPI (Vue: GlobalAPI) {
   initAssetRegisters(Vue)
 }
 ```
-在Vue.js的初始化过程中，通过`**Mixin(Vue)`为`Vue`原型拓展了很多方法，`initGlobalAPI`还会给`Vue`这个对象本身拓展全局的静态方法。
+在Vue.js的初始化过程中，通过`Mixin(Vue)`为`Vue`原型拓展了很多方法，`initGlobalAPI`还会给`Vue`这个对象本身拓展全局的静态方法。
 
 #### src/core/instance/init.js
-最后，终于在`src/core/instance/init.js`下终于找到了它，`Vue`本质上是一个用`Function`实现的类。
+最后，终于在`src/core/instance/init.js`下终于找到了Vue的定义，`Vue`本质上是一个用`Function`实现的类：
 ```js
 import { initMixin } from './init'
 import { stateMixin } from './state'
@@ -304,7 +304,8 @@ import { eventsMixin } from './events'
 import { lifecycleMixin } from './lifecycle'
 import { warn } from '../util/index'
 
-// Vue之所以不使用ES6的Class去实现——往后分析可以发现有很多xxxMixin(Vue)的调用，它们都是通过给Vue的prototype上扩展一些方法，Vue按功能把这些扩展分散到多个模块中去实现，而这种方式是用Class难以实现的。
+// Vue之所以不使用ES6的Class去实现——往后分析可以发现有很多xxxMixin(Vue)的调用，它们都是通过给Vue的prototype上扩展一些方法
+// Vue按功能把这些扩展分散到多个模块中去实现，有利于项目的维护升级，而这种方式是用Class难以实现的
 function Vue (options) {
   if (process.env.NODE_ENV !== 'production' &&
     !(this instanceof Vue)
@@ -318,7 +319,7 @@ function Vue (options) {
 // 下面的每个方法可以看做装饰器，从几个角度为Vue增加原型上的属性和方法。
 
 initMixin(Vue)
-// 做了一件事情，在Vue原型上挂载了一个_init方法
+// 做了一件事情，在Vue原型上挂载了一个_init方法——_init方法在new Vue(options)时执行
 
 stateMixin(Vue)
 // 在Vue原型上挂载了 $data、$props、$set、$delete、$watch
