--- a/Vue源码/3.0-Runtime Only版本和Compiler+Runtime版本.md
+++ b/Vue源码/3.0-Runtime Only版本和Compiler+Runtime版本.md
@@ -8,25 +8,29 @@ Vue.js基于源码构建的两个版本：
 该版本只包含运行时版本涵盖了创建`Vue`实例、渲染并处理`Virtual Dom`等功能。`Runtime only`有两种使用场景：
 - 在`options`中手写`render`函数去定义渲染过程
   ```js
+  // 不需要编译器
   new Vue({
     render(h) {
       return h('div', this.title)
     }
   })
   ```
-- 借助`Vue-loader`这样的编译工具进行编译，当我们利用webpack进行Vue的工程化开发时，常常会利用vue-loader对.vue进行编译，尽管我们也是利用template模板标签去书写代码，但是**此时的Vue已经不需要利用编译器去负责模板的编译工作**了，这个过程交给了插件去实现。
+- 利用`webpack`进行`Vue`的工程化开发时借助`vue-loader`这样的编译工具对`.vue`文件进行离线编译，尽管我们也可以利用`template`模板标签去书写代码，但是**此时的Vue已经不需要利用编译器去负责模板的编译工作**了，这个过程交给了`vue-loader`去实现。
 
-  编译过程对性能会造成一定的损耗，并且由于加入了编译的流程代码，Vue代码的总体积也更加庞大(运行时版本相比完整版体积要小大约 30%)。因此在实际开发中，我们需要借助像webpack的vue-loader这类工具进行编译，将Vue对模板的编译工作放到webpack的构建流程（**离线编译**）中去做，这样不仅减小了生产环境代码的体积，也提高了运行时的性能。
+  编译过程对性能会造成一定的损耗，并且由于加入了编译的流程代码，Vue代码的总体积也更加庞大(运行时版本相比完整版体积要小大约 30%)。因此在实际开发中，我们将对`Vue`模板的编译工作放到`webpack`的构建流程（**离线编译**）中去做，这样不仅减小了生产环境代码的体积，也提高了运行时的性能。
 
 #### Runtime + compiler
-该版本下，可以通过提供`template`属性创建`Vue`实例，
+该版本下，可以通过指定`template`创建`Vue`实例：
 
 ```js
+// 需要编译器
 new Vue({
   template: '<div>{{ title }}</div>'
 })
 ```
-由模板编译出`render`的工作在`src/platform/web/entry-runtime-with-compiler.js`中定义：
+
+
+`src/platform/web/entry-runtime-with-compiler.js`中定义了把模板编译成`render`的工作：
 
 ```js
 /**
@@ -70,10 +74,11 @@ Vue.prototype.$mount = function (
   // 需要编译 or 不需要编译
 
   if (!options.render) {
-    // 如果实例$options上无render方法，则将el或者template字符串转换为render方法，这个过程就是编译
+    // 如果实例$options上无render方法，则将template或者el转换为render方法，这个过程就是编译
 
     let template = options.template
 
+    // template的值可以是标识id标识的字符串，也可以是节点对象
     if (template) {
       if (typeof template === 'string') {
         if (template.charAt(0) === '#') {
@@ -86,7 +91,7 @@ Vue.prototype.$mount = function (
           }
         }
       } else if (template.nodeType) {
-        // template 是节点对象
+        // template 的类型是元素节点，则使用该元素的innerHTML作为template
         template = template.innerHTML
       } else {
         if (process.env.NODE_ENV !== 'production') {
@@ -95,8 +100,12 @@ Vue.prototype.$mount = function (
         return this
       }
     } else if (el) {
+      // 没有传入template，则使用el元素的outerHTML作为template
       template = getOuterHTML(el)
     }
+
+    // template存储着最终用来生成render渲染函数的字符串
+
     if (template) {
       if (process.env.NODE_ENV !== 'production' && config.performance && mark) {
         mark('compile')
@@ -129,6 +138,7 @@ function getOuterHTML (el: Element): string {
   if (el.outerHTML) {
     return el.outerHTML
   } else {
+    // IE9-11 中 SVG 标签元素没有 innerHTML 和 outerHTML 这两个属性
     const container = document.createElement('div')
     container.appendChild(el.cloneNode(true))
     return container.innerHTML
@@ -143,4 +153,4 @@ export default Vue
 #### 总结
 总之，无论是使用单文件`.vue`方式开发组件，还是写了`el`或者`template`属性，最终都会转换成`render`方法，所有组件的渲染最终都需要`render`方法，这是`Vue`的一个**编译**的过程。
 
-带`compiler`版本的Vue.js通过`compileToFunctions`方法实现在线编译，而`Runtime only`版本的Vue.js不做在线编译，离线编译工作在构建阶段借助`vue-loader`完成。
+带`compiler`版本的Vue.js通过`compileToFunctions`方法实现在线编译。而`Runtime only`版本的Vue.js不做在线编译，手动提供`render`创建`Vue`实例时则不需要编译工作，未提供则借助类似`vue-loader`工具在构建阶段完成离线编译工作。
