--- a/Vue源码/3.0-Runtime Only版本和Compiler+Runtime版本.md
+++ b/Vue源码/3.0-Runtime Only版本和Compiler+Runtime版本.md
@@ -50,7 +50,7 @@ const idToTemplate = cached(id => {
   return el && el.innerHTML
 })
 
-// 用mount缓存了Vue原型上的$mount方法，原型上的$mount方法是在src/platform/weex/runtime/index.js中定义的
+// 原型上的$mount方法是在src/platform/weex/runtime/index.js中定义的，这里用mount缓存了$mount方法
 const mount = Vue.prototype.$mount
 
 // 重写$mount方法？
@@ -154,3 +154,6 @@ export default Vue
 总之，无论是使用单文件`.vue`方式开发组件，还是写了`el`或者`template`属性，最终都会转换成`render`方法，所有组件的渲染最终都需要`render`方法，这是`Vue`的一个**编译**的过程。
 
 带`compiler`版本的Vue.js通过`compileToFunctions`方法实现在线编译。而`Runtime only`版本的Vue.js不做在线编译，手动提供`render`创建`Vue`实例时则不需要编译工作，未提供则借助类似`vue-loader`工具在构建阶段完成离线编译工作。
+
+本节简单分析了带`compiler`版本的Vue.js在`rc/platform/web/entry-runtime-with-compiler.js`中做了什么工作——重写了原型上的`$mount`方法，在调用原型的`$mount`之前检查`vm.$options.render`是否存在，不存在则需要编译工作，具体的`compileToFunctions`的过程会在后面用一节来分析。
+
