--- a/Vue源码/3.1-Vue实例mount.md
+++ b/Vue源码/3.1-Vue实例mount.md
@@ -42,10 +42,12 @@ export function initMixin (Vue: Class<Component>) {
       )
     }
 
-    // 在非生产环境下设置渲染函数的作用域代理，其目的是在开发时提供更好的提示信息（如在模板内访问实例上不存在的属性，则会给出准确的报错信息）
+
     if (process.env.NODE_ENV !== 'production') {
+      // 在非生产环境下设置渲染函数的作用域代理，其目的是在开发阶段提供良好的提示信息（如在模板内访问实例上不存在的属性，则会给出准确的报错信息）
       initProxy(vm)
     } else {
+      // 生产环境中，vm._renderProxy 是实例本身
       vm._renderProxy = vm
     }
   
@@ -221,4 +223,4 @@ export function mountComponent (
 - 监测到vm实例中数据发生变化，执行回调函数？
 
 #### 总结
-`$mount`通过实例化一个`Watcher`，在它的回调中调用`updateComponent`方法——`vm._$render`生成虚拟vnode，并通过`vm._update`更新DOM，从而完成整个渲染工作。
+`$mount`方法的执行依靠`mountComponent`，而`mountComponent`通过实例化一个`Watcher`，在其监听数据变化的回调中通过执行`vm._update(vm._render(), hydrating)`——`vm._render`将实例转换为虚拟vnode，而`vm._update`将虚拟vnode渲染更新为真正的DOM，从而完成整个渲染工作。
