--- a/Vue源码/3.4-创建虚拟节点createElement.md
+++ b/Vue源码/3.4-创建虚拟节点createElement.md
@@ -154,7 +154,8 @@ export function normalizeChildren (children: any): ? Array<VNode> {
 }
 
 /**
- * simpleNormalizeChildren的调用场景是render方法是由编译产生，理论上生成的children都是VNode类型，只需要针对children为函数式组件返回的是一个数组做处理。Vue.js中函数式组件在哪些场景下使用？
+ * simpleNormalizeChildren的调用场景是render方法是由编译产生，理论上生成的children都是VNode类型，只需要针对children为函数式组件返回的是一个数组做处理。
+ * Vue.js中函数式组件在哪些场景下使用？
 */ 
 export function simpleNormalizeChildren (children: any) {
   for (let i = 0; i < children.length; i++) {
@@ -164,11 +165,10 @@ export function simpleNormalizeChildren (children: any) {
   }
   return children
 }
+```
+`normalizeChildren`方法定义如下：
 
-/**
- * normalizeChildren
- */
-
+```js
 function normalizeArrayChildren (children: any, nestedIndex?: string): Array<VNode> {
   const res = []
   let i, c, lastIndex, last
@@ -218,6 +218,6 @@ function normalizeArrayChildren (children: any, nestedIndex?: string): Array<VNo
 }
 ```
 
-经过规范化，`children`变成了类型为`VNode`的一维数组。
+经过以上规范化，`children`变成了类型为`VNode`的一维数组。
 
 #### VNode的创建
