--- a/Vue源码/3.4-创建虚拟节点createElement.md
+++ b/Vue源码/3.4-创建虚拟节点createElement.md
@@ -10,6 +10,8 @@ export function createElement (
 ): VNode | Array<VNode> {
   // alwaysNormalize 在template编译出render函数时为false，手写render方法时为true
   if (Array.isArray(data) || isPrimitive(data)) {
+    // data长什么样子——data为对象。
+    // 如果data为Array类型或基本类型，则认为无data，此时传递的事实上作为children处理
     normalizationType = children
     children = data
     data = undefined
@@ -21,14 +23,10 @@ export function createElement (
 }
 ```
 
-`createElement`方法对`_createElement`做了一层封装，传入`_createElement`函数的参数进行了处理。如果`data`是数组或者是原始类型，则调整参数位置。
+`createElement`方法对`_createElement`做了一层封装，对传入`_createElement`函数的参数进行了处理。如果`data`是数组或者是原始类型，则调整参数位置。
 
 ```js
 /**
- * context: VNode的上下文环境
- * tag 标签
- * data表示VNode的数据
- * children表示当前VNode的子节点，它是任意类型的，需要被规范为VNode数组
  * normalizationType表示子节点规范的类型，根据`render`方法是由编译还是手写而取值
  */
 export function _createElement (
@@ -67,7 +65,7 @@ export function _createElement (
       )
     }
   }
-  // support single function children as default scoped slot
+
   if (Array.isArray(children) &&
     typeof children[0] === 'function'
   ) {
@@ -85,27 +83,22 @@ export function _createElement (
     let Ctor
     ns = (context.$vnode && context.$vnode.ns) || config.getTagNamespace(tag)
     if (config.isReservedTag(tag)) {
-      // platform built-in elements
       vnode = new VNode(
         config.parsePlatformTagName(tag), data, children,
         undefined, undefined, context
       )
     } else if ((!data || !data.pre) && isDef(Ctor = resolveAsset(context.$options, 'components', tag))) {
-      // component
       vnode = createComponent(Ctor, data, context, children, tag)
     } else {
-      // unknown or unlisted namespaced elements
-      // check at runtime because it may get assigned a namespace when its
-      // parent normalizes children
       vnode = new VNode(
         tag, data, children,
         undefined, undefined, context
       )
     }
   } else {
-    // direct component options / constructor
     vnode = createComponent(tag, data, context, children)
   }
+  // 最后，对vnode再次做校验
   if (Array.isArray(vnode)) {
     return vnode
   } else if (isDef(vnode)) {
@@ -118,11 +111,13 @@ export function _createElement (
 }
 ```
 
-`_createElement`主要做了两项工作：`children`的规范化以及`VNode`的创建。
+看起来稍微有点长，`_createElement`在这里主要做了两件事：
+- `children`的规范化
+- `VNode`的创建
 
 #### children规范化
 
-由于`Virtual DOM`实际上是一个树状结构，每一个VNode可能会有若干个子节点，这些子节点也应该是VNode类型，而`_createElement`方法接收的参数`children`是任意类型的，因此需要将它规范成VNode类型。
+由于`Virtual DOM`实际上是一个树状结构，每一个VNode可能会有若干个子节点，这些子节点也应该是VNode类型，而`_createElement`方法接收的参数`children`是任意类型的（发生在手写render时），因此需要将它规范成VNode类型。
 
 ```js
 if (normalizationType === ALWAYS_NORMALIZE) {
@@ -139,11 +134,10 @@ if (normalizationType === ALWAYS_NORMALIZE) {
  * src/core/vdom/helpers/normalize-children
  */
 
-/**
- * normalizeChildren的调用场景有两种：
- * 一是render方法是由开发手写，当children只有一个节点的时候，Vue.js从接口层面允许用户将children写成基础类型用来创建单个简单文本节点，这种情况下会调用createTextVNode创建一个文本节点的VNode
- * 另一种是编译slot、v-for产生嵌套数组的情况，调用normalizeArrayChildren方法
- */ 
+
+// normalizeChildren的调用场景有两种：
+// 一是render方法是由开发手写，当children只有一个节点的时候，Vue.js从接口层面允许用户将children写成基础类型用来创建单个简单文本节点，这种情况下会调用createTextVNode创建一个文本节点的VNode
+// 另一种是编译slot、v-for产生嵌套数组的情况，调用normalizeArrayChildren方法
 
 export function normalizeChildren (children: any): ? Array<VNode> {
   return isPrimitive(children)
@@ -153,10 +147,9 @@ export function normalizeChildren (children: any): ? Array<VNode> {
       : undefined
 }
 
-/**
- * simpleNormalizeChildren的调用场景是render方法是由编译产生，理论上生成的children都是VNode类型，只需要针对children为函数式组件返回的是一个数组做处理。
- * Vue.js中函数式组件在哪些场景下使用？
-*/ 
+
+// simpleNormalizeChildren的调用场景是render方法是由编译产生，理论上生成的children都是VNode类型，只需要针对children为函数式组件返回的是一个数组做处理
+// Vue.js中函数式组件在哪些场景下使用？
 export function simpleNormalizeChildren (children: any) {
   for (let i = 0; i < children.length; i++) {
     if (Array.isArray(children[i])) {
@@ -224,3 +217,42 @@ function normalizeArrayChildren (children: any, nestedIndex?: string): Array<VNo
 经过以上规范化，`children`变成了类型为`VNode`的一维数组。
 
 #### VNode的创建
+回到`_createElement`方法内，在对`children`做规范化处理后，接下来的工作是创建`VNode`实例。
+
+```js
+let vnode, ns
+if (typeof tag === 'string') {
+  // 字符串类型
+  let Ctor
+  ns = (context.$vnode && context.$vnode.ns) || config.getTagNamespace(tag)
+  if (config.isReservedTag(tag)) {
+    // config.isReservedTag定义在src/platform/web/util/element.js下
+    // 这里用于判断tag是否为内置节点
+    vnode = new VNode(
+      config.parsePlatformTagName(tag), data, children,
+      undefined, undefined, context
+    )
+  } else if (isDef(Ctor = resolveAsset(context.$options, 'components', tag))) {
+    // resolveAsset定义在src/core/util/options.js下
+    // 会依次通过普通命名、camelize、capitalize几种命名风格检查tag是否为注册的组件名
+    // 创建组件类型的VNode
+    vnode = createComponent(Ctor, data, context, children, tag)
+  } else {
+    vnode = new VNode(
+      tag, data, children,
+      undefined, undefined, context
+    )
+  }
+} else {
+  vnode = createComponent(tag, data, context, children)
+}
+```
+
+#### 总结
+至此，大致分析了
+```js
+vm._c = (a, b, c, d) => createElement(vm, a, b, c, d, false)
+
+vm.$createElement = (a, b, c, d) => createElement(vm, a, b, c, d, true)
+```
+这两个挂在实例上的方法的内部流程，其作用是用于创建`VNode`，紧接着的工作是将`VNode`渲染成真实的DOM，这个工是由`vm._update`完成的。
