--- a/Vue源码/3.1-Vue实例mount.md
+++ b/Vue源码/3.1-Vue实例mount.md
@@ -140,7 +140,7 @@ export function mountComponent (
   vm.$el = el
 
   if (!vm.$options.render) {
-    // 渲染函数不存在, 导致创建一个空的vnode对象
+    // 渲染函数不存在, 则创建一个空的vnode对象
     vm.$options.render = createEmptyVNode
 
     // 告警
