--- a/Vue源码/3.2-Vue实例render.md
+++ b/Vue源码/3.2-Vue实例render.md
@@ -17,7 +17,6 @@ Vue.prototype._render = function (): VNode {
 
   // 用$vnode保存父虚拟node
   vm.$vnode = _parentVnode
-  // render self
   let vnode
   try {
     // There's no need to maintain a stack becaues all render fns are called
@@ -26,13 +25,12 @@ Vue.prototype._render = function (): VNode {
     currentRenderingInstance = vm
 
     // render = vm.$options.render
-    // 这一大段代码的主线
+    // 主线
     vnode = render.call(vm._renderProxy, vm.$createElement)
   } catch (e) {
     handleError(e, vm, `render`)
     // return error render result,
     // or previous vnode to prevent render error causing blank component
-    /* istanbul ignore else */
     if (process.env.NODE_ENV !== 'production' && vm.$options.renderError) {
       try {
         vnode = vm.$options.renderError.call(vm._renderProxy, vm.$createElement, e)
@@ -46,7 +44,7 @@ Vue.prototype._render = function (): VNode {
   } finally {
     currentRenderingInstance = null
   }
-  // if the returned array contains only a single node, allow it
+  // vnode为数组且数组长度为1
   if (Array.isArray(vnode) && vnode.length === 1) {
     vnode = vnode[0]
   }
@@ -107,8 +105,7 @@ import { createElement } from '../vdom/create-element'
 
 export function initRender (vm: Component) {
   vm._c = (a, b, c, d) => createElement(vm, a, b, c, d, false)
-  // normalization is always applied for the public version, used in
-  // user-written render functions.
+
   vm.$createElement = (a, b, c, d) => createElement(vm, a, b, c, d, true)
 }
 ```
@@ -120,4 +117,4 @@ export function initRender (vm: Component) {
 ```js
 vnode = vm.$optoins.render.call(vm._renderProxy, vm.$createElement)
 ```
-生成虚拟vnode并返回，其中`render`来自开发者手动提供或通过`template`编译，而`$createElement`是在`_init(vm)`阶段`initRender(vm)`时定义在实例上的，它又调用了`createElement`方法，这个方法将在后面小节单独分析。
+生成虚拟vnode并返回，其中`render`来自开发者手动提供或通过`template`编译生成，而`$createElement`是在`_init(vm)`阶段`initRender(vm)`时定义在实例上的，它又调用了`createElement`方法，这个方法将在后面单独分析。
