--- a/Vue源码/3.4-createElement.md
+++ b/Vue源码/3.4-createElement.md
@@ -27,7 +27,7 @@ export function createElement (
 
 ```js
 /**
- * normalizationType表示子节点规范的类型，根据`render`方法是由编译还是手写而取值
+ * normalizationType表示子节点规范的类型，其值取决于`render`方法是由编译还是开发者手写
  */
 export function _createElement (
   context: Component,
@@ -53,7 +53,7 @@ export function _createElement (
     // 动态component被设置了不存在的组件名
     return createEmptyVNode()
   }
-  // warn against non-primitive key
+  // key不能是非基本类型值
   if (process.env.NODE_ENV !== 'production' &&
     isDef(data) && isDef(data.key) && !isPrimitive(data.key)
   ) {
@@ -66,6 +66,7 @@ export function _createElement (
     }
   }
 
+  // 哪种情况下 children会为function？
   if (Array.isArray(children) &&
     typeof children[0] === 'function'
   ) {
@@ -73,11 +74,15 @@ export function _createElement (
     data.scopedSlots = { default: children[0] }
     children.length = 0
   }
+
+  // 规范化children
   if (normalizationType === ALWAYS_NORMALIZE) {
     children = normalizeChildren(children)
   } else if (normalizationType === SIMPLE_NORMALIZE) {
     children = simpleNormalizeChildren(children)
   }
+  
+  // 创建VNode
   let vnode, ns
   if (typeof tag === 'string') {
     let Ctor
@@ -98,6 +103,7 @@ export function _createElement (
   } else {
     vnode = createComponent(tag, data, context, children)
   }
+  
   // 最后，对vnode再次做校验
   if (Array.isArray(vnode)) {
     return vnode
