--- a/浏览器-1.架构概述.md
+++ b/浏览器-1.架构概述.md
@@ -15,11 +15,11 @@
 |网络进程|负责页面的网络资源加载|
 |GPU进程|独立于其他进程处理GPU任务，GPU进程被分离成独立进程是因为GPU处理来自不同Tab页的渲染请求并把它们在同一个界面上绘制出来|
 
-下面是通过自己的chrome浏览器任务管理器观测，
+下面是在自己的chrome浏览器中打开任务管理器的截图，
 
 ![chrome进程test](https://pic.downk.cc/item/5e63c00e98271cb2b8fcf870.jpg)
 
-可以看到，在chrome中，不同的Tab页拥有不同的渲染进程，每个插件运行在不同的插件进程中。除了之前表格中所列的的进程之外，在任务管理器中还可以看到`Audio Service`进程和`V8 代理解析工具`等进程。
+可以看到，在chrome中，不同的Tab页拥有不同的<font color="red">**渲染进程**</font>，每个插件运行在不同的插件进程中。除了之前表格中所列的的进程之外，在任务管理器中还可以看到`Audio Service`进程和`V8 代理解析工具`等进程。
 
 #### 多进程架构的优点：
 - 一个Tab页的崩溃不会影响整个浏览器
@@ -42,7 +42,7 @@
 #### 渲染引擎
 浏览器渲染引擎的主要工作就是渲染，即在浏览器窗口中呈现所请求的内容。渲染引擎可以渲染HTML、XML文档和图像，借助插件也可以渲染不同类型的文档比如PDF。
 
-关于渲染引擎的工作原理我会总结在另一篇笔记中。
+关于渲染引擎的工作原理后面将继续整理。
 
 #### JS引擎
 开发者编写的JavaScript代码直接交给浏览器执行时，CPU是不认识的——CPU只认识自己的指令集（汇编代码）。JS引擎可以将JavaScript代码编译为不同CPU(Intel, ARM以及MIPS等)对应的汇编代码。
