--- a/浏览器-2.渲染引擎.md
+++ b/浏览器-2.渲染引擎.md
@@ -1,8 +1,8 @@
-在了解了浏览器的多进程架构及浏览器内核后，现在我们接着来学习渲染引擎。
+在初步了解浏览器的多进程架构及浏览器内核后，现在我们接着来学习渲染引擎。
 
 ![渲染引擎结构](https://pic.downk.cc/item/5e65238098271cb2b89a1c67.jpg)
 
-如图所示，渲染引擎主要由对上述这些资源进行解析的处理器组成——HTML解释器、CSS解释器、布局计算等。为了更好地呈现渲染效果，渲染引擎还需要依赖网络、缓存、绘图工具、硬件加速机制等。
+如图所示，渲染引擎主要由对浏览器接收到的网络资源进行解析的处理器组成——HTML解释器、CSS解释器、布局计算等。为了呈现渲染效果，渲染引擎依赖了网络、缓存、绘图工具、硬件加速机制等。
 
 ## 渲染过程
 渲染引擎在获取文档后，大致进行了以下操作：
@@ -12,19 +12,49 @@
 1. 通过HTML解释器解析HTML/SVG/XHTML文档，生成DOM树
 2. 通过CSS解释器解析CSS生成CSS规则树
 3. JavaScript通过DOM API和CSSOM API操作DOM树和CSS规则树
-4. 通过DOM树和CSS规则树来构造渲染树（渲染树不等于DOM树，因为像Header/display为none之类的元素在渲染树中不存在）
+4. 通过DOM树和CSS规则树来构造渲染树（渲染树不等于DOM树，因为像Header、display为none之类的元素在渲染树中不存在）
 5. 计算每个元素的位置，又叫layout和reflow
-6. 调用操作系统Native GUI的API来将元素绘制到屏幕上
+6. 调用操作系统Native GUI的API将元素绘制到屏幕上
+7. 需要注意的是，在浏览器渲染完首屏页面后，如果对 DOM 进行操作会引起浏览器引擎对 DOM 渲染树的重新布局和重新绘制，这叫做**重排**和**重绘**，由于重排和重绘是前后依赖的关系，**重绘发生时未必会触发渲染引擎的重排，但是如果发生了重排就必然会触发重绘操作**
 
-#### 构建DOM树
+在不同的浏览器内核（渲染引擎）下， 浏览器渲染的流程略有不同，如`Webkit`和`Geoko`对于CSS样式表的解析时机不同，对于解析过程中的描述术语也有不同。
+
+#### HTML解析，构建DOM
+以下面这段`HTML`为例：
+```html
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link href="style.css" rel="stylesheet">
+    <title>Critical Path</title>
+  </head>
+  <body>
+    <p>Hello <span>web performance</span> students!</p>
+    <div><img src="awesome-photo.jpg"></div>
+  </body>
+</html>
+```
+
+对于浏览器从磁盘或网络读取HTML文档的原始字节，渲染引擎是无法直接理解的，所以要将其转化为渲染引擎能够理解的内部结构——DOM。DOM提供了对HTML文档结构化的表述。
+
+![DOM](https://pic.downk.cc/item/5ea7bcd3c2a9a83be597316e.png)
+
 
 #### CSS解析
 
+
+
 #### 构建渲染树
 
-#### 渲染树布局
 
-#### 渲染树绘制
+
+#### 布局
+
+
+
+#### 绘制
+
 
 ___
 #### 参考
@@ -32,3 +62,5 @@ ___
 2. [详解渲染进程](https://blog.acohome.cn/inside-browser-part3/)
 3. [浏览器渲染原理与过程](https://srtian96.gitee.io/blog/2018/06/01/%E6%B5%8F%E8%A7%88%E5%99%A8%E6%B8%B2%E6%9F%93%E5%8E%9F%E7%90%86/)
 4. [一文看懂Chrome浏览器运行机制](https://zhuanlan.zhihu.com/p/102149546)
+5. [构建对象模型](https://developers.google.com/web/fundamentals/performance/critical-rendering-path/constructing-the-object-model?hl=zh-cn)
+6. [可视化讲解DOM构建过程](https://juejin.im/post/5b4431dde51d4519195a9cf5)
