--- a/Vue源码/3.4-createElement.md
+++ b/Vue源码/3.4-createElement.md
@@ -255,10 +255,10 @@ if (typeof tag === 'string') {
 ```
 
 #### 总结
-至此，大致分析了
+至此，本节大致分析了
 ```js
 vm._c = (a, b, c, d) => createElement(vm, a, b, c, d, false)
 
 vm.$createElement = (a, b, c, d) => createElement(vm, a, b, c, d, true)
 ```
-这两个挂在实例上的方法的内部流程，其作用是用于创建`VNode`，紧接着的工作是将`VNode`渲染成真实的DOM，这个工是由`vm._update`完成的。
+这两个挂在实例上的方法的内部流程，其作用是用于创建`VNode`，紧接着的工作是将`VNode`渲染成真实的DOM，这个由`vm._update`完成的，将在后面继续分析。
