--- a/Vue源码/3.4-createElement.md
+++ b/Vue源码/3.4-createElement.md
@@ -233,15 +233,16 @@ if (typeof tag === 'string') {
   ns = (context.$vnode && context.$vnode.ns) || config.getTagNamespace(tag)
   if (config.isReservedTag(tag)) {
     // config.isReservedTag定义在src/platform/web/util/element.js下
-    // 这里用于判断tag是否为内置节点
+    // 这里用于判断tag是否为内置标签
+    // 如果是则创建一个对应的VNode对象
     vnode = new VNode(
       config.parsePlatformTagName(tag), data, children,
       undefined, undefined, context
     )
   } else if (isDef(Ctor = resolveAsset(context.$options, 'components', tag))) {
     // resolveAsset定义在src/core/util/options.js下
-    // 会依次通过普通命名、camelize、capitalize几种命名风格检查tag是否为注册的组件名
-    // 创建组件类型的VNode
+    // 会依次通过普通命名、camelize、capitalize几种命名风格检查tag是否为已经注册的组件名
+    // 如果是则通过createComponent创建组件类型的VNode
     vnode = createComponent(Ctor, data, context, children, tag)
   } else {
     vnode = new VNode(
@@ -250,6 +251,7 @@ if (typeof tag === 'string') {
     )
   }
 } else {
+  // 非字符串
   vnode = createComponent(tag, data, context, children)
 }
 ```
