--- a/Vue源码/1.1-Vue源码结构.md
+++ b/Vue源码/1.1-Vue源码结构.md
@@ -37,6 +37,10 @@ Vue.js 2.0支持服务端渲染，这部分是SSR相关逻辑。
 shared目录下有两个文件：
 - constant.js：定义了生命周期钩子函数、全局方法两个常量数组
 - utils.js：定义了一些公用的如变量类型判断、类型转换等方法
+
+
+![Vue.js源码](https://ustbhuangyi.github.io/vue-analysis/assets/mind.png)
+
 ___
 #### 参考
  [Vue.js技术揭秘](https://ustbhuangyi.github.io/vue-analysis/v2/prepare/directory.html)
