--- a/Vue源码/2.0-Runtime Only版本和Compiler+Runtime版本.md
+++ b/Vue源码/2.0-Runtime Only版本和Compiler+Runtime版本.md
@@ -29,7 +29,6 @@ new Vue({
 })
 ```
 
-
 `src/platform/web/entry-runtime-with-compiler.js`中定义了把模板编译成`render`的工作：
 
 ```js
@@ -50,10 +49,9 @@ const idToTemplate = cached(id => {
   return el && el.innerHTML
 })
 
-// 原型上的$mount方法是在src/platform/weex/runtime/index.js中定义的，这里用mount缓存了$mount方法
+// 带compiler版本的Vue.js重写$mount方法，需要缓存在src/platform/weex/runtime/index.js中定义的$mount方法
 const mount = Vue.prototype.$mount
 
-// 重写$mount方法？
 // 为包含编译器和不包含编译器的版本提供不同的封装，最终调用的是上面缓存过的原型上的$mount方法
 Vue.prototype.$mount = function (
   el?: string | Element,
@@ -155,5 +153,4 @@ export default Vue
 
 带`compiler`版本的Vue.js通过`compileToFunctions`方法实现在线编译。而`Runtime only`版本的Vue.js不做在线编译，手动提供`render`创建`Vue`实例时则不需要编译工作，未提供则借助类似`vue-loader`工具在构建阶段完成离线编译工作。
 
-本节简单分析了带`compiler`版本的Vue.js在`rc/platform/web/entry-runtime-with-compiler.js`中做了什么工作——重写了原型上的`$mount`方法，在调用原型的`$mount`之前检查`vm.$options.render`是否存在，不存在则需要编译工作，具体的`compileToFunctions`的过程会在后面用一节来分析。
-
+本节简单分析了带`compiler`版本的Vue.js在`rc/platform/web/entry-runtime-with-compiler.js`中做了什么工作——重写了原型上的`$mount`方法，在调用原型的`$mount`之前检查`vm.$options.render`是否存在，不存在则需要编译工作，具体的`compileToFunctions`的过程会在后面编译部分具体分析。
