--- a/Vue源码/2.4-createElement.md
+++ b/Vue源码/2.4-createElement.md
@@ -1,4 +1,4 @@
-Vue.js通过`createElement`方法创建VNode类实例，这个方法定义在`src/core/vdom/create-element`中：
+Vue.js通过`createElement`方法创建`VNode`类实例，这个方法定义在`src/core/vdom/create-element`中：
 ```js
 export function createElement (
   context: Component,
@@ -11,7 +11,7 @@ export function createElement (
   // alwaysNormalize 在template编译出render函数时为false，手写render方法时为true
   if (Array.isArray(data) || isPrimitive(data)) {
     // data长什么样子——data为对象。
-    // 如果data为Array类型或基本类型，则认为无data，此时传递的事实上作为children处理
+    // 因为data必须为对象类型变量，如果传入的data为Array类型或基本类型，则认为无data，此时传递的data作为children处理
     normalizationType = children
     children = data
     data = undefined
@@ -122,8 +122,7 @@ export function _createElement (
 - `VNode`的创建
 
 #### children规范化
-
-由于`Virtual DOM`实际上是一个树状结构，每一个VNode可能会有若干个子节点，这些子节点也应该是VNode类型，而`_createElement`方法接收的参数`children`是任意类型的（发生在手写render时），因此需要将它规范成VNode类型。
+由于`Virtual DOM`实际上是一个树状结构，每一个`VNode`实例可能会有若干个子节点，这些子节点也应该是`VNode`类型，而`_createElement`方法接收的参数`children`是任意类型的（发生在手写`render`时），因此需要将它规范成`VNode`类型。
 
 ```js
 if (normalizationType === ALWAYS_NORMALIZE) {
@@ -223,7 +222,7 @@ function normalizeArrayChildren (children: any, nestedIndex?: string): Array<VNo
 经过以上规范化，`children`变成了类型为`VNode`的一维数组。
 
 #### VNode的创建
-回到`_createElement`方法内，在对`children`做规范化处理后，接下来的工作是创建`VNode`实例。
+回到`_createElement`方法主流程中，在对`children`做规范化处理之后，接下来的工作是创建`VNode`实例。
 
 ```js
 let vnode, ns
@@ -242,7 +241,7 @@ if (typeof tag === 'string') {
   } else if (isDef(Ctor = resolveAsset(context.$options, 'components', tag))) {
     // resolveAsset定义在src/core/util/options.js下
     // 会依次通过普通命名、camelize、capitalize几种命名风格检查tag是否为已经注册的组件名
-    // 如果是则通过createComponent创建组件类型的VNode
+    // 如果是，则通过createComponent创建组件类型的VNode
     vnode = createComponent(Ctor, data, context, children, tag)
   } else {
     vnode = new VNode(
@@ -255,6 +254,8 @@ if (typeof tag === 'string') {
   vnode = createComponent(tag, data, context, children)
 }
 ```
+
+其中，通过`createComponent`创建组件类型`VNode`的过程将在后面组件源码中分析。
 
 #### 总结
 至此，本节大致分析了
