--- a/Vue源码/2.1-Vue实例mount.md
+++ b/Vue源码/2.1-Vue实例mount.md
@@ -96,7 +96,7 @@ export function initMixin (Vue: Class<Component>) {
 在对`Vue`实例的初始化工作完成之后，检测到`$options.el`属性存在并使用`vm.$mount`方法挂载`Vue`实例，从而做到将模板+数据渲染成为最终的`DOM`。
 
 #### $mount的实现
-Vue.js中`$mount`方法的定义出现在三个模块中：`src/platform/web/entry-runtime-with-compiler.js`、`src/platform/web/runtime/index.js`、`src/platform/weex/runtime/index.js`，因为对`$mount`的定义是与平台、构建方式相关的。
+Vue.js中`$mount`方法的定义出现在三个模块中：`src/platform/web/entry-runtime-with-compiler.js`、`src/platform/web/runtime/index.js`、`src/platform/weex/runtime/index.js`，这是因为对`$mount`的定义是与平台、构建方式相关的。
 
 在对`$mount`分析之前，先了解一下Vue.js基于源码构建的两个版本：
 - runtime only 只包含运行时的版本
