add link 前端模块化总结

--- a/前端模块化总结.md
+++ b/前端模块化总结.md
@@ -93,11 +93,7 @@ Module.foo()
 - CMD
 - ES 6模块化
 
-----
-#### 分割线
-
-----
-
+---
 ### CommonJS
 CommonJS规范规定，每个模块内部，`module`变量代表当前模块。这个变量是一个对象，它的`exports`属性（即`module.exports`）是对外的接口。加载某个模块，其实是加载该模块的`module.exports`属性。
 
@@ -123,11 +119,11 @@ Node内部提供一个Module构建函数。所有模块都是Module的实例。
 - `module.exports`
 表示模块对外输出的值
 
-为了方便，Node为每个模块提供一个exports变量，指向module.exports，这等同于在每个模块的头部有一行这样的命令：
+为了方便，Node为每个模块提供一个`exports`变量，指向`module.exports`，这等同于在每个模块的头部有一行这样的命令：
 ```js
 var exports = module.exports
 ```
-因此，在对外暴露模块接口时可以通过向exports对象添加属性方法：
+因此，在对外暴露模块接口时可以通过向`exports`对象添加属性方法：
 ```js
 exports.area = function (r) {
   return Math.PI * r * r
@@ -137,12 +133,17 @@ exports.circumference = function (r) {
   return 2 * Math.PI * r
 }
 ```
-需要注意的是，不能直接将exports变量指向一个值，因为这样等于切断了exports与module.exports的联系：
+需要注意的是，不能直接将`exports`变量指向一个值，因为这样等于切断了`exports`与`module.exports`的联系：
 ```js
+exports.area = function () {}
+
+// 下面的模块定义无效
 exports = function(x) {
   return x * x
 }
 ```
+
+___
 ### AMD
 由于Node.js主要用于服务器编程，模块文件一般都已经存在于本地硬盘，加载较快，不用考虑非同步加载的方式，所以CommonJS规范比较适用。但是对于浏览器环境，要从服务器端加载模块，这时就必须采用非同步模式，浏览器端一般采用AMD规范。
 
@@ -152,6 +153,7 @@ requireJS是AMD规范的一种实现，它主要解决两个问题：
 
 require()函数在加载依赖的函数的时候是异步加载的，这样浏览器不会失去响应，它指定的回调函数，在前面的模块都加载成功后才会运行，解决了依赖性的问题
 
+___
 ### CMD规范
 CMD是在AMD基础上改进的一种规范，和AMD的不同在于对依赖模块的**执行时机**处理不同
 
@@ -173,6 +175,8 @@ define(['./a', './b'], function(a, b) {
   b.doSomething()
 })
 ```
+
+___
 ### ES 6 模块
 ES6标准发布后，module成为标准，标准使用是以`export`指令导出接口，以`import`引入模块，但是在我们一贯的node模块中，我们依然采用的是`CommonJS规范`，使用`require`引入模块，使用`module.exports`导出接口
 
@@ -182,3 +186,9 @@ ES6标准发布后，module成为标准，标准使用是以`export`指令导出
 
 - `import` 命令会被 JavaScript 引擎静态分析，优先于模块内的其他内容执行。
 - `export` 命令会有变量声明提前的效果。
+
+___
+#### 参考
+1.[理解JS模块化](https://xieyufei.com/2017/02/19/JS-Standard.html)
+2.[前端模块化详解](https://juejin.im/post/5c17ad756fb9a049ff4e0a62#heading-49)
+3.[深入理解ES6模块机制](https://zhuanlan.zhihu.com/p/33843378?utm_medium=hao.caibaojian.com&utm_source=hao.caibaojian.com)
