--- a/浏览器-2.渲染引擎.md
+++ b/浏览器-2.渲染引擎.md
@@ -11,15 +11,15 @@
 
 1. 通过HTML解释器解析HTML/SVG/XHTML文档，生成DOM树
 2. 通过CSS解释器解析CSS生成CSS规则树
-3. JavaScript通过DOM API和CSSOM API操作DOM树和CSS规则树
-4. 通过DOM树和CSS规则树来构造渲染树（渲染树不等于DOM树，因为像Header、display为none之类的元素在渲染树中不存在）
-5. 计算每个元素的位置，又叫layout和reflow
-6. 调用操作系统Native GUI的API将元素绘制到屏幕上
-7. 需要注意的是，在浏览器渲染完首屏页面后，如果对 DOM 进行操作会引起浏览器引擎对 DOM 渲染树的重新布局和重新绘制，这叫做**重排**和**重绘**，由于重排和重绘是前后依赖的关系，**重绘发生时未必会触发渲染引擎的重排，但是如果发生了重排就必然会触发重绘操作**
+3. 通过DOM树和CSS规则树来构造渲染(render)树（渲染树不等于DOM树，因为像Header、display为none之类的元素在渲染树中不存在）
+4. 渲染树布局，又叫layout/reflow，计算每个元素的尺寸、位置
+5. 渲染树绘制，又叫paint，绘制页面像素信息
+6. 合成帧，浏览器将各层信息发送给GPU，GPU将各层合成，显示在屏幕上
+7. 需要注意的是，在浏览器渲染完首屏页面后，如果对DOM进行操作会引起浏览器引擎对渲染树的重新布局和重新绘制，这叫做**重排**和**重绘**，由于重排和重绘是前后依赖的关系，**重绘发生时未必会触发渲染引擎的重排，但是如果发生了重排就必然会触发重绘操作**
 
-在不同的浏览器内核（渲染引擎）下， 浏览器渲染的流程略有不同，如`Webkit`和`Geoko`对于CSS样式表的解析时机不同，对于解析过程中的描述术语也有不同。
+在不同的浏览器内核（渲染引擎）下， 浏览器渲染的流程略有不同，如`Webkit`和`Geoko`对于CSS样式表的解析时机不同，对于解析过程中的描述术语也有不同，但是总体上工作流程是一致的。
 
-#### HTML解析，构建DOM
+#### 一、HTML解析，构建DOM
 以下面这段`HTML`为例：
 ```html
 <!DOCTYPE html>
@@ -36,24 +36,54 @@
 </html>
 ```
 
-对于浏览器从磁盘或网络读取HTML文档的原始字节，渲染引擎是无法直接理解的，所以要将其转化为渲染引擎能够理解的内部结构——DOM。DOM提供了对HTML文档结构化的表述。
+对于浏览器从磁盘或网络读取HTML文档的原始字节，渲染引擎是无法直接理解的，所以要将其转化为渲染引擎能够理解的内部结构——DOM，DOM提供了对HTML文档结构化的表述。
 
 ![DOM](https://pic.downk.cc/item/5ea7bcd3c2a9a83be597316e.png)
 
+从上图可以看到，由HTML文档到DOM树，共经历了四个步骤：
+1. **转化**： 浏览器从磁盘或网络读取HTML文档的原始字节流，并根据文件的指定编码（例如 UTF-8）将它们转换成字符串，也就是前端er写的代码
+2. **令牌(Token)化**： 浏览器将字符串转换成HTML标准规定的各种令牌，如`<html>`，`<body>`等用尖括号包含的字符串，标识出当前令牌是开始标签或者是结束标签，用于维护节点与节点之间的关系（父子、兄弟等）
+3. **词法分析**： 将发出的令牌转换成节点对象，带有结束标签标识的令牌不会创建节点对象，节点对象包含了这个节点的所有属性；**注意：词法分析不是在所有Token都转换完成后才进行的，边生成Token边消耗Token**
+4. **DOM构建**： 利用创建的节点之间的关系，所有节点对象连在一起构成了一个树状结构，便得到了一个完整的DOM树
 
-#### CSS解析
+#### 二、CSS解析
+在浏览器构建DOM树时，在HTML文档head部分解析到了`link`标记，该标记引用了一段外部样式表`style.css`，浏览器会发送对该资源的请求，假设它长这样:
+```css
+body { font-size: 16px }
+p { font-weight: bold }
+span { color: red }
+p span { display: none }
+img { float: right }
+```
+
+与解析HTML一样，我们需要将收到的`CSS`规则转换成某种浏览器能够理解和处理的东西：
+
+![CSS解析](https://pic.downk.cc/item/5ebac694c2a9a83be5bfbf63.png)
+
+CSS字节转换成字符，接着转换成令牌和节点，最后连在一起构成一个CSS对象模型(CSSOM)的树状结构：
+
+![CSSOM树](https://pic.downk.cc/item/5ebacb11c2a9a83be5c88711.png)
+
+要注意的是，以上树并非完整的`CSSOM`树，它只显示了在样式表中决定的样式，每个浏览器都提供一组默认样式。
+
+另外，CSSOM树的构建和DOM树的构建是并行的。等待CSSOM树和DOM树构建完毕后才进入构建渲染树阶段。
+
+#### 三、构建渲染树
+![构建渲染树](https://pic.downk.cc/item/5ebacd74c2a9a83be5cb49d4.png)
+
+为了构建渲染树，浏览器大致做了以下工作：
+1. 从根节点开始遍历DOM树，由于需要构建渲染树，因此忽略以下不可见节点：
+    - 脚本标签、meta标签等
+    - 通过CSS设置了隐藏的节点：`display: none`
+2. 对于每个可见节点，为其找到适配的CSSOM规则并应用
+3. 
+
+
+#### 四、布局
 
 
 
-#### 构建渲染树
-
-
-
-#### 布局
-
-
-
-#### 绘制
+#### 五、绘制
 
 
 ___
