--- a/前端模块化总结（一）.md
+++ b/前端模块化总结（一）.md
@@ -77,7 +77,7 @@ Module.foo() // 不受影响，仍然输出 'foo: data in module'
 Module.foo()
 ```
 
-当前模块依赖jQuery库，因此需要将jQuery作为参数传入，这样**保证了模块之间的独立性，模块间的依赖关系也表现地比较明显**，这也是现代模块实现的基石。
+当前模块依赖jQuery库，因此需要将jQuery作为参数传入，这样**保证了模块之间的独立性，模块间的依赖关系也表现地比较明显**，这就是模块模式，也是现代模块实现的基石。
 
 ## 模块化的好处
 - 避免命名冲突、减少命名空间污染
@@ -86,7 +86,7 @@ Module.foo()
 - ...
 
 ## 模块化规范
-传统的通过`<script>`引入模块的方式，存在两个问题：一是每个JavaScript模块对应一个资源请求，当引入多个模块时会导致请求过多；二是模块间的依赖关系，导致严格的`<script>`的先后顺序，且依赖关系不明显。
+传统的通过`<script>`引入模块的方式，存在两个问题：一是每个JavaScript模块对应一个资源请求，当引入多个模块时会导致请求过多；二是模块间的依赖关系，导致严格的`<script>`的先后顺序，且依赖关系模块。
 
 针对上面的问题，各种前端模块化规范也应用而生了，下面对各个规范作介绍。
 - CommonJS
@@ -223,46 +223,88 @@ AMD是`RequireJS`在推广过程中对模块定义的规范化产出, CMD是`Sea
 
 ```js
 // AMD
-define(['./math', './count-down'], function(math, count) { 
+// 定义模块
+// count-down.js
+define('coun-down', ['jquery'], function($) { 
   // 依赖必须一开始就写好
+  $('#app').html('test')
+  console.log('hahha')
+  var foo = function (n) {
+    return n + 1
+  }
+  // 导出模块
+  return {
+    foo: foo
+  }
+})
 
-  return {} // 导出模块
+// 加载模块
+require(['count-down'], function (f) {
+  // 即使加载了cout-down模块不使用，count-down模块内的脚本也会提前执行
+  // 在这里先$('#app').html('test')，输出'hahaha'，之后才执行下面的回调
+  f.foo(2)
 })
 ```
 
-AMD推崇依赖前置，在定义模块的时候就要声明其依赖的模块
+AMD推崇依赖前置，提前执行。在定义模块的时候就要声明其依赖的模块，加载的模块先于指定回调执行。
 
 ```js
 // CMD 
 define(function(require, exports, module) {
-  var $ = require('jquery')
-  $('#app').html('...')
-  var b = require('./b') // 依赖就近书写
+  console.log('定义CMD模块')
+  var b = require('count-down') // 依赖就近书写
   
-  module.exports = {} // 导出模块
+  // 几种导出模块的形式
+  // module.exports = {}
+  // exports.foo = function () {}
+  // return {
+  //   foo: function () {}
+  // }
 })
 ```
 
-CMD推崇就近依赖，在需要用到某个模块的时候再去`require`
+CMD推崇就近依赖，延迟执行。
 
 ___
 ## ES 6模块
-`ES 6`在语言标准的层面上，实现了模块功能，**旨在成为浏览器和服务器通用的模块解决方案**。其模块功能主要由两个命令构成：`export`和`import`。`export`命令用于规定模块的对外接口，`import`命令用于加载其他模块。
+ES 6在语言标准的层面上，实现了模块功能，**旨在成为浏览器和服务器通用的模块解决方案**。
 
-在ES 6标准中，
-1. `export`只支持对象形式的导出，不支持值的导出
-2. `export default`命令用于指定模块的默认输出，只支持值导出，且只能指定一个
+ES 6模块功能主要由两个命令构成：`export`和`import`。`export`命令用于规定模块的对外接口，`import`命令用于输入其他模块提供的功能。
 
-模块加载
-1. `import` 命令会被 JavaScript 引擎静态分析，优先于模块内的其他内容执行。
-2. `export` 命令会有变量声明提前的效果。
+ES 6模块不是对象，而是通过`export`命令显式指定输出的代码，再通过`import`命令输入。
+
+```js
+// 加载模块
+import { dateFormat, appId } from 'util';
+
+// 导出模块
+// util.js
+export function dateFormat (time, format) {
+  // ...
+}
+
+export const appId = 'zxcadasfsazfdsazfasd'
+```
+
+上面代码的实质是从`util`模块加载一个方法和一个常量，其他方法、变量不加载。这种加载称为 **“编译时加载”** 或者 **静态加载**，即ES 6可以在编译时就完成模块加载。
+
+ES 6模块自动采用严格模式，因此有以下限制：
+1. 变量必须先声明后使用
+2. 不能使用`with`
+3. 不能对只读属性赋值
+4. 不能使用`this`指向全局对象，顶层`this`指向`undefined`
+5. 不能使用`arguments.callee`、`arguments.caller`
 
 ___
 ## ES Module和CommonJS模块
+1. CommonJS模块输出的是一个值的拷贝，ES 6模块输出的是值的引用
+CommonJS模块输出的是`module.exports`这个对象，我们读取的也是这个对象，而不是模块内部某个变量。也就是说，一旦输出一个值，模块内部的变化就影响不到这个值（引用类型除外）。而对于ES 6模块，由于在JavaScript引擎对脚本做静态分析的时候，遇到模块加载`import`命令，就会生成一个只读引用。等到脚本真正执行时，再根据这个只读引用，到被加载的那个模块里面去取值。
 
+2. CommonJS模块是**运行时**加载，ES 6模块是**编译时**输出接口
+这是因为CommonJS的加载的是一个对象（即module.exports属性），该对象只有在脚本运行完才会生成。而ES 6模块不是对象，它的对外接口只是一种静态定义，在代码静态解析阶段生成，使得编译时就能确定模块的依赖关系(“静态优化”)。
 
 ___
 #### 参考
 1.[理解JS模块化](https://xieyufei.com/2017/02/19/JS-Standard.html)
 2.[前端模块化详解](https://juejin.im/post/5c17ad756fb9a049ff4e0a62#heading-49)
-3.[深入理解ES6模块机制](https://zhuanlan.zhihu.com/p/33843378?utm_medium=hao.caibaojian.com&utm_source=hao.caibaojian.com)
+3.[深入理解ES 6模块机制](https://zhuanlan.zhihu.com/p/33843378?utm_medium=hao.caibaojian.com&utm_source=hao.caibaojian.com)
