--- a/图片懒加载.md
+++ b/图片懒加载.md
@@ -30,15 +30,20 @@ document.addEventListener('scroll', throttle(watchScroll, 200))
 ```
 
 ## 交叉观察者 IntersectionObserver
-故事本来到这里可以结束了，但是对scroll事件的监听（即便使用了节流仍然会）导致大量计算，以及`setTimeout`的使用仍然存在性能问题。
+对scroll事件的监听（即便使用了节流仍然会）导致大量计算，以及`setTimeout`的使用仍然存在性能问题。
 
-在2016年，chrome中实现了一个新的API —— `IntersectionObserver`，它的任务就是监听目标元素与指定父元素（用户可指定，**默认为viewport**）是否在发生交叉行为，简单理解就是监听目标元素是否进入或者离开了指定父元素的内部。
+2016年，chrome实现了一个新的API —— `IntersectionObserver`：
+> IntersectionObserver接口，提供了一种**异步**观察目标元素与其祖先元素或顶级文档视窗(viewport)交叉状态的方法，祖先元素与视窗(viewport)被称为根(root)。
 
-使用：
+它的任务就是监听目标元素与父元素（用户可指定，**默认为viewport**）是否在发生交叉行为，简单理解就是监听目标元素是否进入或者离开了指定父元素的内部。
+
+用法很简单：
 ```js
 const observer = new IntersectionObserver(callback, options) 
 ```
-其中`callback`代表当被监听的元素可见性发生变化时触发的回调函数， `callback`接收一个`entries`参数，表示当前已监听并且发生了交叉的目标集合，集合中的对象`IntersectionObserverEntry`长这个样子：
+
+#### 1. callback
+其中`callback`代表当被监听的元素**可见性发生变化时**触发的回调函数， `callback`接收一个`entries`参数，表示当前已监听并且发生了交叉的目标集合，集合中的对象`IntersectionObserverEntry`长这个样子：
 ```json
 {
   "boundingClientRect": Client {},
@@ -61,15 +66,34 @@ const observer = new IntersectionObserver(callback, options)
 }
 ```
 
-- target: 被观察的目标元素，是一个DOM节点对象
-- time: 可见性发生变化的时间
+- target: 被观察的目标元素，DOM节点对象
+- time: 目标元素可见性发生变化的时间
 - rootBounds: 根元素的矩形区域信息
 - boundingClientRect: 目标元素的矩形区域信息
 - intersectionRect: 目标元素与视口的交叉区域信息
-- intersectionRatio: 目标元素的可见比例，intersectionRect/boundingClientRect
-- 猫眼
+- intersectionRatio: 目标元素的可见比例，intersectionRect size/boundingClientRect size，完全可见时为1，完全不可见时等于0
+- isIntersecting: 一个布尔值，表示目标元素与根元素是否相交
+- isVisable：网上冲浪找到的资料均表示这个字段为布尔值，用于描述目标元素是否可见——本人实际测试时此字段总是为`false`，为什么和文档描述不一致待考察。
 
-构造函数返回一个构造器实例，通过实例的`observe`方法来指定需要观察的DOM节点：
+#### 2. options
+构造函数的第二个参数是一个配置对象：
+- `threshold`：
+  `threshold`属性决定了什么时候触发回调函数。它是一个数组，每个成员都表示一个阈值，默认为[0]，即交叉比例（intersectionRatio）达到0时触发回调函数。
+  如：
+  ```js
+  new IntersectionObserver(
+    entries => {},
+    {
+      threshold: [0, 0.5, 1]
+    }
+  )
+  ```
+  表示目标元素0%、50%、100% 可见时，触发回调函数。
+- `root`：所监听对象的具体根素。如果未传入值或值为null，则默认使用顶级文档的视窗(一般为html)
+- `rootMargin`：计算交叉时添加到根(root)边界盒bounding box的矩形偏移量，可以有效控制根元素的判定范围从而满足计算需要。所有的偏移量均可用像素(px)或百分比(%)来表达, 默认值为"0px 0px 0px 0px"。
+
+#### 3. 方法
+上述构造函数返回一个观察器实例，观察器原型上有以下方法：
 ```js
 // 开始观察
 observer.observe(img)
@@ -81,17 +105,33 @@ observer.unobserver(img)
 observer.disconnect()
 ```
 
-回归需求：
+#### 4. 回归需求：
 ```js
-const observer = new IntersectionObserver(function (changes) {
-  changes.forEach(function (change) {
-    const target = change.target
+const observer = new IntersectionObserver(function (entries) {
+  entries.forEach(function (entry) {
+    const target = entry.target
     if (!target.src) {
       target.src = target.getAttribute('data-src')
+      // 关闭观察器
+      observer.unobserve(target)
     }
   })
 }, null)
 
 const imgs = Array.from(document.querySelectorAll('.lazy-img'))
+// 逐个观察
 imgs.forEach(img => observer.observe(img))
 ```
+
+`IntersectionObserver`是异步的，不随着目标元素的滚动同步触发。
+
+`IntersectionObserver`的实现，应该采用requestIdleCallback()，即只有线程空闲下来，才会执行观察器。这意味着，这个观察器的优先级非常低，只在其他任务执行完，浏览器有了空闲才会执行。
+
+#### 浏览器支持情况
+![IntersectionObserver浏览器支持情况](https://pic.downk.cc/item/5ece0196c2a9a83be55692c1.jpg)
+
+对于不支持的浏览器，可以使用`polyfill`来作兼容。
+
+#### 参考
+1. [IntersectionObserver API 使用教程](http://www.ruanyifeng.com/blog/2016/11/intersectionobserver_api.html)
+2. [什么？你还在使用这种懒加载方式？](https://juejin.im/post/5d7348c2f265da039d32f236)
