--- a/浏览器-1.架构概述.md
+++ b/浏览器-1.架构概述.md
@@ -42,13 +42,13 @@
 #### 渲染引擎
 浏览器渲染引擎的主要工作就是渲染，即在浏览器窗口中呈现所请求的内容。渲染引擎可以渲染HTML、XML文档和图像，借助插件也可以渲染不同类型的文档比如PDF。
 
-关于渲染引擎的工作原理后面将继续整理。
+关于渲染引擎的工作原理单独整理在下一节。
 
 #### JS引擎
 开发者编写的JavaScript代码直接交给浏览器执行时，CPU是不认识的——CPU只认识自己的指令集（汇编代码）。JS引擎可以将JavaScript代码编译为不同CPU(Intel, ARM以及MIPS等)对应的汇编代码。
 
 在为数不多JS引擎中，V8无疑是最流行的。
-Chrome与Node.js都使用了V8引擎，关于V8引擎的具体工作原理我总结在另一篇笔记中。
+Chrome与Node.js都使用了V8引擎，关于V8引擎的具体工作原理后面将单独整理。
 
 ___
 #### 参考
